mitigations/sa-token.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpha
spec:
  serviceAccountName: alpha
  containers:
  - name: alpha
    image: ericsmalling/snyky:latest

---
apiVersion: v1
kind: Pod
metadata:
  name: beta
spec:
  serviceAccountName: beta
  containers:
  - name: beta
    image: ericsmalling/snyky:latest
